remove binaries replace stdlib API (mutex & queue) by UE API AudioListener: release COM objects when stopped

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ WindowsAudioCapture/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+/WindowsAudioCapture/Intermediate
+/WindowsAudioCapture/Binaries
